feat: implement query filter requests for get all users controller
